# StreamingETL

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.airflow  README.md  docker-compose.yaml  main.py  pyproject.toml  wikimedia_recent_changes_extract.py
.github/workflows/: ci-cd.yml
docs/: architecture.md  demo-guide.md  operations-runbook.md  project-brief.md
k8s/: namespace.yaml
k8s/airflow/: airflow-deployment.yaml
k8s/kafka/: kafka-deployment.yaml  kafka-hpa.yaml  kafka-service.yaml
src/airflow/: README.md
src/airflow/dags/: streamingetl_pipeline_dag.py
src/data_extraction/: kafka_extraction.py  wikimedia_recent_changes_extract.py
src/data_transformation/: Spark_transformations.py  __init__.py  azure_storage_utils.py  data_checking.ipynb  data_loading_Spark.py  data_quality.py  kafka_to_bronze.py  lakehouse_quality_checks.py  silver_to_gold.py  spark_data_extraction_fromKafka.py
src/data_visualization/: README.md  __init__.py  dashboard_data_check.py  gold_dashboard.py  redis_cache.py
tests/: test_pipeline.py
