[project]
name = "streamingetl"
version = "0.1.0"
description = "Step-by-step streaming ETL learning project with Wikimedia."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kafka-python>=2.3.1",
    "pandas>=3.0.3",
    "pyspark>=4.1.2",
    "python-dotenv>=1.2.2",
    "requests-sse",
    "streamlit>=1.57.0",
]
